--- a/stm32/parcytec projector controller/MDK-ARM/parcytec projector controller/parcytec projector controller.build_log.htm
+++ b/stm32/parcytec projector controller/MDK-ARM/parcytec projector controller/parcytec projector controller.build_log.htm
@@ -26,27 +26,9 @@ Project File Date:  11/26/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'parcytec projector controller'
-assembling startup_stm32f103xb.s...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_it.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal.c...
-compiling main.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_tim.c...
+Build target 'parcytec projector controller'
 linking...
-Program Size: Code=5996 RO-data=304 RW-data=16 ZI-data=1856  
+Program Size: Code=6112 RO-data=304 RW-data=16 ZI-data=1856  
 FromELF: creating hex file...
 "parcytec projector controller\parcytec projector controller.axf" - 0 Error(s), 0 Warning(s).
 
@@ -72,7 +54,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
