--- a/stm32/parcytec projector controller/MDK-ARM/parcytec projector controller/parcytec projector controller.build_log.htm
+++ b/stm32/parcytec projector controller/MDK-ARM/parcytec projector controller/parcytec projector controller.build_log.htm
@@ -27,8 +27,9 @@ Project File Date:  11/26/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'parcytec projector controller'
+compiling main.c...
 linking...
-Program Size: Code=6112 RO-data=304 RW-data=16 ZI-data=1856  
+Program Size: Code=6036 RO-data=304 RW-data=16 ZI-data=1856  
 FromELF: creating hex file...
 "parcytec projector controller\parcytec projector controller.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
